--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,11 +39,11 @@ bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # color status bar
 set -g status-bg colour235
-set -g status-fg white
+set -g status-fg yellow
 
 # highlight current window
 set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-bg yellow
 
 # set color of active pane
 set -g pane-active-border-fg white
