--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
   ci = commit
   st = status
   lg = log --graph --decorate --format='%Cred%h%Creset%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(cyan)%aN%Creset'
+  d = difftool
 [branch]
   autosetuprebase = always
 [log]
@@ -17,5 +18,12 @@
 [merge]
   defaultToUpstream = true
 [filter "media"]
-	clean = git-media-clean %f
-	smudge = git-media-smudge %f
+	clean = git media clean %f
+	smudge = git media smudge %f
+	required = true
+[core]
+	editor = vim
+[diff]
+  tool = vimdiff
+[difftool]
+  prompt = false
